# spliter-game

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist.in  README.md  main.cpp  triangle-sapp.glsl
dependency/glad/include/glad/: glad.h
dependency/glad/src/: glad.c
engine/: graphics.cpp  graphics.h  graphics.mm  gui.cpp  gui.h  window.cpp  window.h
resource/: iosLaunchScreen.storyboard
